Upgrade to Bootstrap 4
- Updated js for new version of jquery
- Updated css for new version of bootstrap
- Updated views for new version of bootstrap
- Added a changelog

--- a/app/assets/stylesheets/blacklight/_blacklight_base.scss
+++ b/app/assets/stylesheets/blacklight/_blacklight_base.scss
@@ -8,11 +8,11 @@
 
 @import 'blacklight/blacklight_defaults';
 
-@import "blacklight/layout";
+@import "blacklight/bootstrap_overrides";
 @import "blacklight/header";
 @import "blacklight/catalog";
+@import "blacklight/pagination";
 @import "blacklight/group";
-@import "blacklight/bookmark";
 @import "blacklight/facets";
 @import "blacklight/search_history";
 @import "blacklight/modal";
