--- a/app/assets/stylesheets/blacklight/_catalog.scss
+++ b/app/assets/stylesheets/blacklight/_catalog.scss
@@ -24,7 +24,7 @@
   .ind1, .ind2
   {
     display:inline;
-    padding:0 $padding-xs-horizontal;
+    padding:0;
   }
 
   .subfields
@@ -39,7 +39,7 @@
 }
 
 .constraints-container {
-  @extend .well;
+  @extend .card;
   line-height: 2.5;
   padding: 16px 19px;
 }
@@ -55,37 +55,34 @@ span.constraints-label {
     text-overflow: ellipsis;
     overflow: hidden;
 
-    @media (max-width: $screen-xs-max) {
-      max-width: $screen-xs-min / 2;
+    @media (max-width: breakpoint-max(xs)) {
+      max-width: breakpoint-max(xs) / 2;
     }
 
-    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-      max-width: $screen-sm-min / 2;
+    @media (min-width: breakpoint-min(sm)) and (max-width: breakpoint-max(sm)) {
+      max-width: breakpoint-min(sm) / 2;
     }
 
-    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
-      max-width: $screen-md-min / 2;
+    @media (min-width: breakpoint-min(md)) and (max-width: breakpoint-max(md)) {
+      max-width: breakpoint-min(md) / 2;
     }
 
-    @media (min-width: $screen-lg-min) {
-      max-width: $screen-lg-min / 2;
+    @media (min-width: breakpoint-min(lg)) {
+      max-width: breakpoint-min(lg) / 2;
     }
 
     &:hover, &:active {
-      background-color: $btn-default-bg;
-      border-color: $btn-default-border;
+      background-color: theme-color("secondary");
+      border-color: theme-color("secondary");
       box-shadow: none;
     }
   }
 
   .filterName:after
   {
-    @extend .text-muted;
-    font-family: 'Glyphicons Halflings';
-    /* glyphicon-chevron-right */
-    content: "\e080";
-    font-size: 70%;
-    padding-left: $caret-width-base;
+    content: "❯";
+    font-size: 90%;
+    padding-left: $caret-width;
   }
 
   .remove:hover, .remove:active {
@@ -96,25 +93,19 @@ span.constraints-label {
 
 #documents {
   .document {
-    margin-top: $padding-base-vertical;
-    padding-top: $padding-base-vertical;
-    border-bottom:1px dotted $table-border-color;
     @extend .clearfix;
-  }
-}
-
-// Tools link on documetn show page
-.show-tools {
-  .bookmark_toggle {
-    padding: $nav-link-padding;
+    border-bottom: 1px dotted $table-border-color;
+    margin-top: $spacer;
+    padding-top: $spacer;
   }
 }
 
 // bookmarks checkbox on index, give it some
 // lower margin when it collapses
 .index-document-functions {
-  margin-bottom: ($line-height-computed / 2);
-  @media (min-width: $screen-sm-min) {
+  margin-bottom: ($line-height-base / 2);
+
+  @media (min-width: breakpoint-min(sm)) {
     margin-bottom: 0;
   }
 }
@@ -128,18 +119,14 @@ span.constraints-label {
 {
   display: inline-block;
   border: 1px solid transparent;
-  padding: $padding-base-vertical $padding-base-horizontal;
+  padding: $btn-padding-y $btn-padding-x;
   padding-left: 0;
-}
-
-.pagination {
-  text-align: center ;
 }
 
 .dl-horizontal
 {
   dd {
-    margin-bottom: $padding-base-vertical;
+    margin-bottom: $spacer;
 
     &:after {
       clear: none;
@@ -151,6 +138,16 @@ span.constraints-label {
   dt {
     font-weight: normal;
     color: $field_name_color;
+    text-align: right;
+
+    @media (max-width: breakpoint-max(sm)) {
+      text-align: left;
+    }
+
+    @media (min-width: breakpoint-max(sm)) {
+      text-align: right;
+    }
+
   }
 }
 
@@ -161,11 +158,11 @@ label.toggle_bookmark
 }
 
 #sidebar-mlt li {
-  padding-bottom: $padding-base-vertical;
+  padding-bottom: $spacer;
 }
 
 #sortAndPerPage, .pagination-search-widgets {
-  border-bottom: 1px solid $pagination-border;
+  border-bottom: $pagination-border-width solid $pagination-border-color;
   margin-bottom: 1em;
   padding-bottom: 1em;
 }
@@ -173,7 +170,7 @@ label.toggle_bookmark
 .pagination-search-widgets {
   @extend .clearfix;
   padding-top: 1px;
-  padding-bottom: $padding-base-vertical;
+  padding-bottom: $spacer;
 }
 
 #sortAndPerPage .dropdown-toggle {
@@ -197,8 +194,8 @@ label.toggle_bookmark
 
 .document-thumbnail {
   float: right;
-  padding-left: $line-height-computed;
-  margin-bottom: $line-height-computed;
+  margin-bottom: $line-height-base;
+  padding-left: $line-height-base;
 }
 
 .view-type {
@@ -211,10 +208,6 @@ label.toggle_bookmark
 
 #sort-dropdown .dropdown-toggle, #per_page-dropdown .dropdown-toggle {
   color: $link-color;
-
-  .caret {
-    color: $text-color;
-  }
 }
 
 
@@ -222,7 +215,7 @@ label.toggle_bookmark
   width: 80%;
 }
 
-@media (max-width: $screen-sm-min) {
+@media (max-width: breakpoint-max(xs)) {
   .search-input-group {
     width: auto;
   }
