--- a/app/assets/stylesheets/blacklight/_header.scss
+++ b/app/assets/stylesheets/blacklight/_header.scss
@@ -4,16 +4,17 @@
 
 #header-navbar {
   .navbar-brand {  /* The main logo image for the Blacklight instance */
-  	width: 150px;
+    background:transparent image_url($logo_image) no-repeat top left;
+    display: inline-block;
     height: 50px;
-	  background:transparent image_url($logo_image) no-repeat top left;
-	  display: inline-block;
-	  text-indent: 100%;
-	  white-space: nowrap;
-	  overflow: hidden;
-	  padding-right:0;
-	  margin-right:20px;
-	  padding-left: 0;
+    margin-right:20px;
+    margin-top: -0.4rem;
+    overflow: hidden;
+    padding-left: 0;
+    padding-right: 0;
+    text-indent: 100%;
+    white-space: nowrap;
+    width: 150px;
   }
 }
 
@@ -21,26 +22,15 @@
   z-index: 1;
 
   .search-query-form {
-    @extend .col-md-8;
+    @extend .col-md-12;
+    @extend .col-lg-8;
     padding-left: 0;
   }
 
-  .search-query-form {
-    border: 0;
-  }
   .submit-search-text {
     // hide 'search' label at very small screens
-    @media screen and (max-width: $screen-xs-min ) {      
-      // copied from .sr-only, sadly can't seem to use @extend in a media
-      // query like this, have to copy. 
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      margin: -1px;
-      padding: 0;
-      overflow: hidden;
-      clip: rect(0,0,0,0);
-      border: 0;    
+    @media screen and (max-width: breakpoint-max(xs)) {
+      @include sr-only();
     }    
   }
 }
