--- a/app/views/catalog/_email_form.html.erb
+++ b/app/views/catalog/_email_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_tag url_for(:controller => controller_name, :action => "email"), :id => 'email_form', :class => "form-horizontal ajax_form", :method => :post do %>
+<%= form_tag url_for(:controller => controller_name, :action => "email"), :id => 'email_form', :class => "ajax_form", :method => :post do %>
 
   <div class="modal-body">
     <%= render :partial=>'/flash_msg' %>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="to">
+    <div class="form-group row">
+      <label class="col-form-label col-sm-2" for="to">
         <%= t('blacklight.email.form.to') %>
       </label>
       <div class="col-sm-10">
@@ -11,8 +11,8 @@
       </div>
     </div>
 
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="message">
+    <div class="form-group row">
+      <label class="col-form-label col-sm-2" for="message">
         <%= t('blacklight.email.form.message') %>
       </label>
       <div class="col-sm-10">
