--- a/app/views/catalog/_facet_pagination.html.erb
+++ b/app/views/catalog/_facet_pagination.html.erb
@@ -1,4 +1,4 @@
-    <div class="prev_next_links btn-group pull-left">
+    <div class="prev_next_links btn-group float-md-left">
       <%= link_to_previous_page @pagination, raw(t('views.pagination.previous')), :params => params, :param_name => blacklight_config.facet_paginator_class.request_keys[:page], :class => 'btn btn-link', :data => {:ajax_modal => "preserve"} do %>
        <span class="disabled btn btn-disabled"><%= raw(t('views.pagination.previous')) %></span>
      <% end %>
@@ -9,13 +9,13 @@
      
     </div>
  
-  <div class="sort_options btn-group pull-right">
+  <div class="sort_options btn-group float-md-right">
     <% if @pagination.sort == 'index' -%>
-      <span class="active az btn btn-default"><%= t('blacklight.search.facets.sort.index') %></span><%= link_to_unless(@pagination.sort == 'count', t('blacklight.search.facets.sort.count'), 
-        @pagination.params_for_resort_url('count', params), :class => "sort_change numeric btn btn-default",  
+      <span class="active az btn btn-secondary"><%= t('blacklight.search.facets.sort.index') %></span><%= link_to_unless(@pagination.sort == 'count', t('blacklight.search.facets.sort.count'),
+        @pagination.params_for_resort_url('count', params), :class => "sort_change numeric btn btn-secondary",
         :data => {:ajax_modal => "preserve"}) %>
     <% elsif @pagination.sort == 'count' -%>
       <%=  link_to(t('blacklight.search.facets.sort.index'), @pagination.params_for_resort_url('index', params), 
-        :class => "sort_change az btn btn-default",  :data => {:ajax_modal => "preserve"}) %><span class="active numeric btn btn-default"><%= t('blacklight.search.facets.sort.count') %></span>
+        :class => "sort_change az btn btn-secondary",  :data => {:ajax_modal => "preserve"}) %><span class="active numeric btn btn-secondary"><%= t('blacklight.search.facets.sort.count') %></span>
     <% end -%>    
   </div>
