--- a/app/views/catalog/_facets.html.erb
+++ b/app/views/catalog/_facets.html.erb
@@ -1,23 +1,24 @@
 <% # main container for facets/limits menu -%>
-<% if has_facet_values?  %>
-<div id="facets" class="facets sidenav">
-
-  <div class="top-panel-heading panel-heading">
-    <button type="button" class="facets-toggle" data-toggle="collapse" data-target="#facet-panel-collapse">
-      <span class="sr-only">Toggle facets</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
+<% if has_facet_values? %>
+  <div id="facets" class="facets sidenav facets-toggleable-sm">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#facet-panel-collapse" aria-controls="facet-panel-collapse" aria-expanded="false" aria-label="Toggle facets">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
-  <h4 class='facets-heading'>
+    <div class="top-panel-heading">
+      <div class="navbar">
+        <h2 class="facets-heading">
+          <%= t('blacklight.search.facets.title') %>
+        </h2>
 
-  	<%= t('blacklight.search.facets.title') %>
-  </h4>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#facet-panel-collapse" aria-controls="facet-panel-collapse" aria-expanded="false" aria-label="Toggle facets">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+
+      <div id="facet-panel-collapse" class="facets-collapse collapse">
+        <%= render_facet_partials %>
+      </div>
     </div>
-
-  <div id="facet-panel-collapse" class="collapse panel-group">
-  <%= render_facet_partials %>
-</div>
-</div>
+  </div>
 <% end %>
