--- a/app/views/catalog/_per_page_widget.html.erb
+++ b/app/views/catalog/_per_page_widget.html.erb
@@ -2,12 +2,12 @@
 
   <span class="sr-only"><%= t('blacklight.search.per_page.title') %></span>
 <div id="per_page-dropdown" class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-    <%= t(:'blacklight.search.per_page.button_label', :count => current_per_page) %> <span class="caret"></span>
+  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
+    <%= t(:'blacklight.search.per_page.button_label', :count => current_per_page) %>
   </button>
   <ul class="dropdown-menu" role="menu">
     <%- per_page_options_for_select.each do |(label, count)| %>
-      <li><%= link_to(label, url_for(params_for_search(:per_page => count))) %></li>
+      <li class="dropdown-item"><%= link_to(label, url_for(params_for_search(:per_page => count))) %></li>
     <%- end -%>
   </ul>
 </div>
