--- a/app/views/catalog/_sms_form.html.erb
+++ b/app/views/catalog/_sms_form.html.erb
@@ -1,16 +1,16 @@
-  <%= form_tag url_for(:controller => controller_name, :action => "sms"), :id => 'sms_form', :class => "form-horizontal ajax_form", :method => :post do %>
+  <%= form_tag url_for(:controller => controller_name, :action => "sms"), :id => 'sms_form', :class => "ajax_form", :method => :post do %>
 <div class="modal-body">
   <%= render :partial=>'/flash_msg' %>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="to"> 
+    <div class="form-group row">
+      <label class="col-form-label col-sm-2" for="to">
         <%= t('blacklight.sms.form.to') %>
       </label>
       <div class="col-sm-10">
         <%= telephone_field_tag :to, params[:to], class: 'form-control' %>
       </div>
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="carrier">
+    <div class="form-group row">
+      <label class="col-form-label col-sm-2" for="carrier">
         <%= t('blacklight.sms.form.carrier') %> 
       </label>
       <div class="col-sm-10">
