--- a/app/views/kaminari/blacklight/_next_page.html.erb
+++ b/app/views/kaminari/blacklight/_next_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="<%= 'disabled' if current_page.last? %>">
-  <%= link_to raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>
+<li class="<%= 'page-item disabled' if current_page.last? %>">
+  <%= link_to raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote, class: 'page-link' %>
 </li>
