--- a/app/views/kaminari/blacklight/_prev_page.html.erb
+++ b/app/views/kaminari/blacklight/_prev_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="<%= 'disabled' if current_page.first? %>">
-  <%= link_to raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
+<li class="page-item<%= ' disabled' if current_page.first? %>">
+  <%= link_to raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote, class: 'page-link' %>
 </li>
